--- a/mock_home.css
+++ b/mock_home.css
@@ -163,6 +163,42 @@ hr {
 	width: 100px;
 	float: left;
 }
+a.info 
+{ 
+    position:relative; 
+    z-index:24; background-color:#ddd; 
+    color:#000; 
+    text-decoration:none 
+} 
+
+a.info:hover {z-index:25; background-color:#ff0} 
+
+a.info span{display: none} 
+
+a.info:hover span 
+{ 
+    display:block; 
+    position:absolute; 
+    top:2em; left:2em; width:10em; 
+    border:1px solid #0cf; 
+    background-color:#555; color:#fff; 
+} 
+
+
+/* Slider popup */
+.slider-container {
+	z-index: 24;
+}
+.slider-container:hover {
+	z-index: 25; 
+}
+.slider-container span {
+	display: none;
+	font-size: 10px;
+}
+.slider-container:hover span {
+	display: block;
+}
 
 
 
